# personal-webhooks

./: .gitignore  CHANGES.md  INSTALL.md  LICENSE  README.md  default.nix  hie.yaml  personal-webhooks.cabal  personal-webhooks.nix  shell.nix
.github/workflows/: release.yml  tests.yml
app/: Main.hs
app/UI/: Client.hs  Create.hs  List.hs  Run.hs  Server.hs
data/migrations/: 20171215T321320-hooks.sql
docs/: TODO.org
examples/: config.yml  download-video.sh  epub.json  request.json  send-to-kindle.sh  watchfifo.sh
lib/Web/Hooks/Personal/: Action.hs  Config.hs  Database.hs  Env.hs  Hook.hs  Request.hs
lib/Web/Hooks/Personal/Action/: Config.hs  Internal.hs  Options.hs  Status.hs
lib/Web/Hooks/Personal/Database/: Config.hs  Functions.hs  Generic.hs  Internal.hs
lib/Web/Hooks/Personal/Hook/: Database.hs  FindBy.hs  Internal.hs
lib/Web/Hooks/Personal/Internal/Action/: Config.hs  Options.hs  Prim.hs  Status.hs
lib/Web/Hooks/Personal/Internal/Database/: Config.hs  Functions.hs  Generic.hs  Prim.hs
lib/Web/Hooks/Personal/Internal/Hook/: Database.hs  FindBy.hs  Prim.hs
lib/Web/Hooks/Personal/Internal/Request/: Config.hs  Prim.hs
lib/Web/Hooks/Personal/Internal/Util/: Process.hs
lib/Web/Hooks/Personal/Request/: Config.hs  Internal.hs
nix/: module.nix  sources.json
scripts/: devrun.sh  new-migration.sh
src/: Main.hs
src/UI/: Create.hs  List.hs  Run.hs  Server.hs
src/Web/Hooks/Personal/: Action.hs  Config.hs  Database.hs  Env.hs  Hook.hs  Request.hs
src/Web/Hooks/Personal/Internal/: JSON.hs  Logging.hs
src/Web/Hooks/Personal/Internal/Action/: Client.hs  Config.hs  Options.hs  Prim.hs  Status.hs
src/Web/Hooks/Personal/Internal/Action/Client/: Config.hs  Posix.hs  Windows.hs
src/Web/Hooks/Personal/Internal/Database/: Config.hs  Functions.hs  Generic.hs  Prim.hs
src/Web/Hooks/Personal/Internal/Hook/: Database.hs  FindBy.hs  Prim.hs
src/Web/Hooks/Personal/Internal/Logging/: Config.hs  Prim.hs
src/Web/Hooks/Personal/Internal/Request/: Config.hs  Prim.hs
test/: integration.sh
