name:          personal-webhooks
version:       0.1.0.0
synopsis:      Trigger personal scripts from incoming HTTP requests
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2017 Peter J. Jones
category:      Web
build-type:    Simple
cabal-version: >=1.10
-- description:

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGES.md

--------------------------------------------------------------------------------
-- Files needed at run time.
data-files:
  data/migrations/*.sql

--------------------------------------------------------------------------------
source-repository head
  type: git
  location: git://github.com/pjones/personal-webhooks.git

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual: True
  default: False

--------------------------------------------------------------------------------
library
  exposed-modules:
    Web.Hooks.Personal.Action
      Web.Hooks.Personal.Action.Config
      Web.Hooks.Personal.Action.Internal
      Web.Hooks.Personal.Action.Options
      Web.Hooks.Personal.Action.Status
    Web.Hooks.Personal.Config
    Web.Hooks.Personal.Database
      Web.Hooks.Personal.Database.Config
      Web.Hooks.Personal.Database.Functions
      Web.Hooks.Personal.Database.Generic
      Web.Hooks.Personal.Database.Internal
    Web.Hooks.Personal.Env
    Web.Hooks.Personal.Hook
      Web.Hooks.Personal.Hook.Database
      Web.Hooks.Personal.Hook.FindBy
      Web.Hooks.Personal.Hook.Internal
    Web.Hooks.Personal.Request
      Web.Hooks.Personal.Request.Config
      Web.Hooks.Personal.Request.Internal

  other-modules:
    Paths_personal_webhooks

  hs-source-dirs: lib
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -Wincomplete-record-updates

  if flag(maintainer)
    ghc-options: -Werror

  build-depends: base                        >= 4.9  && < 5
               , aeson                       >= 1.1  && < 1.3
               , bytestring                  >= 0.10 && < 0.11
               , containers                  >= 0.5  && < 0.6
               , cryptonite                  >= 0.23 && < 0.24
               , data-default                >= 0.7  && < 1.0
               , directory                   >= 1.3  && < 1.4
               , filepath                    >= 1.4  && < 1.5
               , opaleye                     >= 0.5  && < 0.7
               , optparse-applicative        >= 0.13 && < 0.15
               , postgresql-simple           >= 0.5  && < 0.6
               , postgresql-simple-migration >= 0.1  && < 0.2
               , product-profunctors         >= 0.8  && < 0.9
               , profunctors                 >= 5.2  && < 5.3
               , resource-pool               >= 0.2  && < 0.3
               , sandi                       >= 0.4  && < 0.5
               , snap                        >= 1.0  && < 1.1
               , snap-core                   >= 1.0  && < 1.1
               , snap-server                 >= 1.0  && < 1.1
               , template-haskell            >= 2.11 && < 2.12
               , text                        >= 1.2  && < 1.3
               , time                        >= 1.6  && < 1.9
               , transformers                >= 0.5  && < 1.0
               , yaml                        >= 0.8  && < 0.9

--------------------------------------------------------------------------------
executable webhooks
  other-modules:
    UI.Create
    UI.List
    UI.Run

  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -Wincomplete-record-updates

  build-depends: base
               , aeson
               , bytestring
               , data-default
               , opaleye
               , optparse-applicative
               , personal-webhooks
               , table-layout >= 0.8 && < 0.9
               , text
               , transformers

  if flag(maintainer)
    ghc-options: -Werror
