cabal-version:      2.2
name:               personal-webhooks
version:            0.1.0.1
synopsis:           Trigger personal scripts from incoming HTTP requests
license:            BSD-2-Clause
license-file:       LICENSE
author:             Peter Jones <pjones@devalot.com>
maintainer:         Peter Jones <pjones@devalot.com>
copyright:          Copyright (c) 2017-2020 Peter J. Jones
homepage:           https://github.com/pjones/personal-webhooks
bug-reports:        https://github.com/pjones/personal-webhooks/issues
category:           Web
build-type:         Simple

--------------------------------------------------------------------------------
extra-source-files:
  README.md
  CHANGES.md
  examples/*.yml
  examples/*.json

--------------------------------------------------------------------------------
-- Files needed at run time.
data-files:
  data/migrations/*.sql
  examples/*.sh

--------------------------------------------------------------------------------
source-repository head
  type:     git
  location: https://github.com/pjones/personal-webhooks.git

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual:      True
  default:     False

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options:
    -Wall -Wno-name-shadowing -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns -Werror=missing-home-modules
    -Widentities -Wmissing-export-lists -Wredundant-constraints

  if flag(maintainer)
    ghc-options: -Werror -fwrite-ide-info -hiedir=.hie

--------------------------------------------------------------------------------
common extensions
  default-extensions:
    ConstraintKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections

--------------------------------------------------------------------------------
common dependencies
  build-depends:
    , aeson                        >=1.1  && <2.0
    , base                         >=4.9  && <5
    , bytestring                   ^>=0.10
    , cryptonite                   >=0.23 && <0.27
    , directory                    ^>=1.3
    , filepath                     ^>=1.4
    , http-types                   ^>=0.12
    , logging-effect               ^>=1.3
    , memory                       ^>=0.15
    , mtl                          ^>=2.2
    , opaleye                      ^>=0.6
    , optparse-applicative         >=0.13 && <0.16
    , postgresql-simple            >=0.5  && <0.7
    , postgresql-simple-migration  ^>=0.1
    , prettyprinter                ^>=1.6
    , product-profunctors          >=0.8  && <0.11
    , relude                       >=0.6  && <0.8
    , resource-pool                ^>=0.2
    , safe-exceptions              ^>=0.1
    , table-layout                 ^>=0.9
    , template-haskell             >=2.14 && <2.17
    , text                         ^>=1.2
    , time                         >=1.6  && <1.10
    , unordered-containers         ^>=0.2
    , wai                          ^>=3.2
    , warp                         ^>=3.3
    , yaml                         >=0.8  && <0.12

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

--------------------------------------------------------------------------------
library
  import:          options, extensions, dependencies
  exposed-modules:
    Web.Hooks.Personal.Action
    Web.Hooks.Personal.Config
    Web.Hooks.Personal.Database
    Web.Hooks.Personal.Env
    Web.Hooks.Personal.Hook
    Web.Hooks.Personal.Internal.Action.Config
    Web.Hooks.Personal.Internal.Action.Options
    Web.Hooks.Personal.Internal.Action.Prim
    Web.Hooks.Personal.Internal.Action.Status
    Web.Hooks.Personal.Internal.Database.Config
    Web.Hooks.Personal.Internal.Database.Functions
    Web.Hooks.Personal.Internal.Database.Generic
    Web.Hooks.Personal.Internal.Database.Prim
    Web.Hooks.Personal.Internal.Hook.Database
    Web.Hooks.Personal.Internal.Hook.FindBy
    Web.Hooks.Personal.Internal.Hook.Prim
    Web.Hooks.Personal.Internal.JSON
    Web.Hooks.Personal.Internal.Logging
    Web.Hooks.Personal.Internal.Logging.Config
    Web.Hooks.Personal.Internal.Logging.Prim
    Web.Hooks.Personal.Internal.Request.Config
    Web.Hooks.Personal.Internal.Request.Prim
    Web.Hooks.Personal.Request

  other-modules:   Paths_personal_webhooks
  hs-source-dirs:  src

--------------------------------------------------------------------------------
executable webhooks
  import:         options, extensions, dependencies
  other-modules:
    UI.Create
    UI.List
    UI.Run
    UI.Server

  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  personal-webhooks
